--- a/source/build.gradle
+++ b/source/build.gradle
@@ -8,9 +8,9 @@ buildscript {
 }
 
 repositories {
-    mavenCentral()
-    google()
-    maven { url "https://plugins.gradle.org/m2/" }
+//    mavenCentral()
+//    google()
+//    maven { url "https://plugins.gradle.org/m2/" }
 }
 
 dependencies {
@@ -18,5 +18,7 @@ dependencies {
     implementation gradleApi()
     implementation localGroovy()
     implementation "org.javassist:javassist:3.27.0-GA"
-    implementation 'com.android.tools.build:gradle:4.2.0'
+    implementation 'com.android.tools.build:gradle:8.2.2'
+    implementation 'com.android.tools:common:31.8.2'
+    implementation 'org.ow2.asm:asm-commons:9.7'
 }
