--- a/source/upload.gradle
+++ b/source/upload.gradle
@@ -2,15 +2,15 @@ apply plugin: 'maven-publish'
 apply plugin: 'java'
 apply plugin: 'signing'
 
-task sourcesJar(type: Jar) {
+tasks.register('sourcesJar', Jar) {
     from sourceSets.main.allJava
-    classifier = 'sources'
+    archiveClassifier = 'sources'
 }
 
-task javadocJar(type: Jar) {
-    from javadoc
-    classifier = 'javadoc'
-}
+//tasks.register('javadocJar', Jar) {
+//    from javadoc
+//    archiveClassifier = 'javadoc'
+//}
 
 
 File secretPropsFile = project.rootProject.file('local.properties')
@@ -36,7 +36,7 @@ publishing {
 
             artifact jar
             artifact sourcesJar
-            artifact javadocJar
+//            artifact javadocJar
 
             // Self-explanatory metadata for the most part
             pom {
@@ -84,27 +84,27 @@ publishing {
             }
         }
     }
-    repositories {
+//    repositories {
         // The repository to publish to, Sonatype/MavenCentral
-        maven {
+//        maven {
             // This is an arbitrary name, you may also use "mavencentral" or
             // any other name that's descriptive for you
-            name = "fat-aar"
+//            name = "fat-aar"
 
-            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
+//            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+//            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
             // You only need this if you want to publish snapshots, otherwise just set the URL
             // to the release repo directly
-            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+//           url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
 
             // The username and password we've fetched earlier
-            credentials {
-                username ossrhUsername
-                password ossrhPassword
-            }
-        }
-    }
+//            credentials {
+//                username ossrhUsername
+//                password ossrhPassword
+//            }
+//        }
+//    }
 }
-signing {
-    sign publishing.publications
-}
+//signing {
+//    sign publishing.publications
+//}
